[package]
name = "swarmy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.10", features = ["dynamic_linking"] }
bevy-inspector-egui = "0.18"
colored = "2.0.0"
nom-mpq = "0.1.1"
s2protocol = "1.0.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dev-dependencies]
test-log = { version = "0.2", default-features = false, features = ["trace"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
