[package]
name = "swarmy"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Visualizer experiments for Starcraft II - Replay data"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rerun = "0.5.1"
s2protocol = "1.1.0"
nom-mpq = "0.1.1"
colored = "2.0.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
clap = { version = "4.1", features = ["derive"] }
mimalloc = "0.1.36"
convert_case = "0.6.0"
thiserror = "1.0.40"

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dev-dependencies]
test-log = { version = "0.2", default-features = false, features = ["trace"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
