[package]
name = "swarmy"
version = "0.1.0"
edition = "2021"
rust-version = "1.87"
license = "MIT"
description = "Visualizer experiments for Starcraft II - Replay data"
repository = "https://github.com/sebosp/swarmy"

[dependencies]
rerun = { version = "0.23.3", features = ["native_viewer", "web_viewer"] }
s2protocol = "3.1.3"
nom-mpq = "2.0.4"
colored = "3.0.0"
tracing = { version = "0.1.40", features = ["max_level_debug"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive"] }
mimalloc = "0.1.43"
convert_case = "0.8.0"
thiserror = "2"

[dev-dependencies]
test-log = { version = "0.2", default-features = false, features = ["trace"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
